syntax = "proto3";

option java_multiple_files = true;

package mnemosyne;

message NewUserReq {
  string username = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message GetEntityReq {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string picture = 4;
  string role = 5;
  string currentWorkspace = 6;
  string currentGrid = 7;
  string lastLogin = 8;
  string updatedAt = 9;
}

service Mnemosyne {
  rpc SignUp(NewUserReq) returns (UserResponse) {}
  rpc Login(LoginReq) returns (UserResponse) {}
  rpc GetUser(GetEntityReq) returns (UserResponse) {}
}